# serverless-lambda-rust-sns

./: Cargo.toml  package-lock.json  package.json  serverless.yml
src/: main.rs
