[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-config" }
aws-sdk-sns = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-sdk-sns" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", package = "lambda_runtime"}
serde_json = "1.0"